# cc

./: .gitignore  CLAUDE.md  CMakeLists.txt  LICENSE  README.md
.github/workflows/: ci.yml
assets/maps/: 2.5d-large.tmx  2.5d-simple.tmx  2d.tmx
cc/: cc.sln
cc/cc/: cc.vcxproj  cc.vcxproj.filters
cc/cc/TmxParser/: TmxEllipse.cpp  TmxImage.cpp  TmxImage.h  TmxImageLayer.cpp  TmxImageLayer.h  TmxLayer.cpp  TmxLayer.h  TmxMap.cpp  TmxObject.cpp  TmxObject.h  TmxObjectGroup.cpp  TmxObjectGroup.h  TmxPolygon.cpp  TmxPolygon.h  TmxPolyline.cpp  TmxPolyline.h  TmxPropertySet.cpp  TmxPropertySet.h  TmxTile.cpp  TmxTile.h  TmxTileset.cpp  TmxTileset.h  TmxUtil.cpp
cc/cc/base64/: base64.cpp  base64.h
cc/cc/src/: game.cpp
game/: Makefile  games.workspace
game/.codelite/: games.session  refactoring.db
game/cc/: cc.mk  cc.project  cc.txt  cpres.sh  main.cpp
game/cc/maps/: 2.5d-4x4.tmx  2.5d-staged.tmx  2d-simple.tmx  2d.tmx  5x5.tmx
game/cc/src/: camera.h  cc.h  game.cpp  game.h  map.cpp  map.h  object.cpp  object.h  player.cpp  player.h  point.cpp  point.h  sprite.cpp  sprite.h  sprite_texture.h  texture.cpp  texture.h  timer.h
src/: camera.h  exceptions.h  game.cpp  game.h  logger.h  main.cpp  map.cpp  map.h  object.cpp  object.h  player.cpp  player.h  point.h  sprite.cpp  sprite.h  timer.cpp
